feat: add dynamic run-name

--- a/.github/workflows/build-module.yml
+++ b/.github/workflows/build-module.yml
@@ -6,6 +6,8 @@ name: Build Custom Boot Animation Module
 # 3. Run this workflow manually
 # 4. Download the ready-to-flash module
 
+run-name: "Build: ${{ inputs.source == 'template' && format('{0}/{1}', inputs.device, inputs.system) || 'upload' }} → ${{ inputs.target_location }}"
+
 on:
   workflow_dispatch:
     inputs:
