--- a/.github/workflows/close-upload-pr.yml
+++ b/.github/workflows/close-upload-pr.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   close-pr:
     runs-on: ubuntu-latest
-    # Only run for PRs from forks - check if head repo is different from base repo
+    # Only run for PRs from forks
     if: ${{ github.event.pull_request.head.repo.full_name != github.event.pull_request.base.repo.full_name }}
     permissions:
       pull-requests: write
